# pdomain-ocr-training

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  LICENSE  Makefile  README.md  pyproject.toml
.basedpyright/: baseline.json
.github/workflows/: ci.yml  release.yml
docs/: README.md
docs/archive/plans/: 2026-05-22-doctr-eval-backend.md
docs/conventions/: lint-deviations.md
docs/decisions/: 2026-05-21-ieval-runner-protocol.md
docs/process/: lint-deviations.md
pd_ocr_training/: __init__.py  _eval_backend.py  datasets.py  detect.py  local.py  local_eval.py  protocols.py  recog.py  utils.py
scripts/: do-release.sh  local-check.sh  local-dev.sh  local-setup.sh  update_github_actions.py
tests/: test_datasets.py  test_eval_backend.py  test_eval_backend_wiring.py  test_eval_protocols.py  test_glyph_slice_emission.py  test_local_eval_runner.py  test_local_runner.py  test_package.py  test_protocols.py  test_torch_free_import.py  test_utils.py
