[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdomain-ocr-training"
version = "0.2.2"
description = "DocTR OCR model training pipeline for the pd-* OCR suite"
authors = [{ name = "CT", email = "concavetrillion@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "pdomain-book-tools>=0.14.1",
    "pydantic>=2.5",
    "tomli>=2.0",
    "tomli-w>=1.0",
]

# The heavy training stack (torch / DocTR / matplotlib) is optional. The base
# install is torch-free so a downstream web process (e.g. pdomain-ocr-trainer-spa)
# can import the typed config models and the ITrainingRunner Protocol without
# pulling multi-GB ML deps. Install `pdomain-ocr-training[train]` to get the full
# LocalTrainingRunner / DocTR training stack.
[project.optional-dependencies]
train = [
    "python-doctr",
    "torch",
    "torchvision",
    "matplotlib",
    "numpy",
]

[project.scripts]
pdomain-ocr-training-detect = "pdomain_ocr_training.detect:main"
pdomain-ocr-training-recog = "pdomain_ocr_training.recog:main"

[project.urls]
Homepage = "https://github.com/pdomain/pdomain-ocr-training"
Source = "https://github.com/pdomain/pdomain-ocr-training"

[tool.hatch.build.targets.wheel]
packages = ["pdomain_ocr_training"]

[[tool.uv.index]]
name = "pdomain-index-pip"
url = "https://pdomain.github.io/pdomain-index-pip/simple/"
explicit = true

[tool.uv.sources]
pdomain-book-tools = { path = "../pd-book-tools", editable = true }

[dependency-groups]
# The dev group installs the `train` extra so the full test suite (which
# exercises LocalTrainingRunner / detect.py / recog.py) and basedpyright run
# against the real torch/DocTR stack. The torch-free import contract is
# verified separately by tests/test_torch_free_import.py, which runs a
# subprocess with torch hidden from sys.modules.
dev = [
    "pdomain-ocr-training[train]",
    "basedpyright>=1.39.4",
    "gitlint>=0.19.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    # Current baseline
    "E", "W",       # pycodestyle errors/warnings
    "F",            # pyflakes
    "I",            # isort (replaces standalone isort)
    "N",            # pep8-naming
    "B",            # flake8-bugbear — mutable defaults, broad excepts, etc.
    "SIM",          # flake8-simplify
    "UP",           # pyupgrade
    "RUF",          # ruff-specific rules
    "ERA",          # eradicate — commented-out code
    "T20",          # flake8-print
    # Added per 2026-05-17 strict-linting decisions
    "ANN",          # flake8-annotations — force type hints on all sigs
    "S",            # flake8-bandit — security rules
    "C4",           # flake8-comprehensions
    "PERF",         # perflint — performance anti-patterns
    "TC",           # flake8-type-checking — move type-only imports to TYPE_CHECKING
    "TID",          # flake8-tidy-imports
    "PT",           # flake8-pytest-style
    "RET",          # flake8-return
    "PL",           # pylint subset (PLC + PLE + PLR + PLW)
    "D",            # pydocstyle
    # Added per 2026-05-17 guidelines audit (BLE/TRY/LOG/G)
    "BLE",          # flake8-blind-except
    "TRY",          # tryceratops — TRY400 enforces log.exception over log.error in except
    "LOG",          # flake8-logging — proper log.* usage
    "G",            # flake8-logging-format — lazy formatting in log calls
]
ignore = [
    # Line length: many long docstrings, error messages, and URLs; enforcing
    # 88-char wrapping everywhere adds noise without improving readability.
    "E501",
    # Docstring style: D203 (1-blank-before-class-docstring) conflicts with
    # D211 (no-blank-before-class-docstring); D212 (multi-line-summary-first-line)
    # conflicts with D213 (multi-line-summary-second-line). Pick one of each pair.
    "D203",
    "D212",
    # Missing docstrings on public modules/packages/magic-methods: large
    # existing codebase; add incrementally, not in a single lint sweep.
    "D100",
    "D104",
    "D107",
    # PLR0913 (too-many-arguments): OCR/pipeline functions legitimately need many
    # params; enforcing here would require invasive config-object refactors.
    "PLR0913",
    # PLR2004 (magic-value-comparison): common in threshold/port/timeout code.
    "PLR2004",
    # TRY003 (long-message-outside-exception-class): too noisy for a library
    # that uses f-string error messages everywhere.
    "TRY003",
    # COM812 (missing-trailing-comma): conflicts with ruff formatter auto-style.
    "COM812",
    # PLC0415 (import-not-at-top-level): deferred imports are a legitimate
    # pattern — used to break circular deps and avoid loading optional-heavy
    # modules until needed. Suppressing globally.
    "PLC0415",
    # PLR complexity rules: pipeline functions legitimately have high
    # branch/return counts; enforcing these would require invasive refactors.
    "PLR0912",  # too-many-branches
    "PLR0911",  # too-many-return-statements
    "PLR0915",  # too-many-statements
    # ANN401 (dynamically-typed-expressions): some functions legitimately
    # accept/return Any (e.g. JSON deserialisers, generic dispatch helpers).
    "ANN401",
    # D205 (1-blank-line-required-between-summary-and-description): enforcing
    # this across the entire docstring backlog is too noisy for one commit.
    "D205",
    # D105 (missing-docstring-in-magic-method): __repr__, __eq__, etc. are
    # self-documenting; require incrementally on new code only.
    "D105",
    # B008 (function-call-in-default-argument): FastAPI Depends() and Pydantic
    # field() use this pattern legitimately in all route definitions.
    "B008",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pdomain_ocr_training"]

[tool.ruff.lint.per-file-ignores]
# Tests: assert is the idiom (S101); magic numbers common (PLR2004); no
# annotations required (ANN); no docstrings required (D); security rules
# relaxed (S105/S106/S311 — hardcoded passwords/random are test fixtures);
# pytest.raises match= not required for every test (PT011);
# /tmp paths are fine in tests (S108); trivial comparisons can be intentional (PLR0133);
# loop-var reassignment as pattern (PLW2901); list-building loops in tests are fine (PERF401);
# BLE001: concurrency stress tests collect thread errors via broad except;
# PLW1510: subprocess.run check= omitted intentionally (returncode asserted explicitly);
# SIM117: nested with blocks are clearer for pytest.raises + context combos.
"tests/**/*.py" = ["S101", "S105", "S106", "S311", "T201", "ANN", "D", "PLR2004", "PT011", "S108", "PLR0133", "PLW2901", "PERF401", "BLE001", "PLW1510", "SIM117"]
# Scripts: print() is the output mechanism; no docstrings required; S607 partial
# executable path is idiomatic when invoking system tools (uv, git, etc.)
"scripts/*.py" = ["T201", "D", "S607"]
# __init__.py: re-exports without docstrings; F401 used for public API surface.
"**/__init__.py" = ["D104", "F401", "TC"]
# Private modules: internal convention, no docstrings required.
"**/_*.py" = ["D"]
# Legacy modules moved verbatim from pd-ocr-trainer — annotation/docstring debt tracked for a follow-up pass; do not rewrite as part of the move.
# BLE/S also suppressed: broad-except and bandit patterns are pre-existing debt in the verbatim-moved code.
"pdomain_ocr_training/utils.py" = ["ANN", "D", "BLE", "S"]
"pdomain_ocr_training/datasets.py" = ["ANN", "D", "BLE", "S"]
# Extra families added during Task 4 verbatim-move: PLW2901 (loop-var overwrite
# is idiomatic GPU tensor reassignment), RET506/RET504 (cosmetic return style),
# PLW1508 (os.environ.get integer defaults), LOG015 (root logger calls),
# PLW0603 (global statement for shared step counter). All pre-existing debt.
"pdomain_ocr_training/detect.py" = ["ANN", "D", "BLE", "S", "PLW2901", "RET506", "PLW1508", "LOG015", "PLW0603", "RET504"]
"pdomain_ocr_training/recog.py" = ["ANN", "D", "BLE", "S", "PLW2901", "RET506", "PLW1508", "LOG015", "PLW0603", "RET504"]

[tool.basedpyright]
include = ["pdomain_ocr_training", "tests"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    # Legacy verbatim-moved files — annotation/type debt tracked for a follow-up pass.
    "pdomain_ocr_training/detect.py",
    "pdomain_ocr_training/recog.py",
    "pdomain_ocr_training/datasets.py",
    "pdomain_ocr_training/utils.py",
]

# "recommended" is the workspace-canonical strict mode per 2026-05-17 decisions.
# Catches unannotated functions, inferred-Any propagation, untyped decorators,
# and missing return types that "standard" mode skips.
typeCheckingMode = "recommended"
# failOnWarnings = true — workspace-canonical strict mode.
# Existing warnings from untyped torch/DocTR/torchvision APIs are grandfathered
# via .basedpyright/baseline.json (generated with --writebaseline). New code
# that introduces warnings beyond the baseline will fail CI, gating warning debt.
failOnWarnings = true

# Import cycles are structural and resolved via TYPE_CHECKING guards.
# Actual import order issues surface as runtime ImportErrors.
reportImportCycles = "none"

# Tell basedpyright where the venv is so it finds third-party stubs.
venvPath = "."
venv = ".venv"

# Per-execution-environment overrides: tests get more leniency.
[[tool.basedpyright.executionEnvironments]]
root = "tests"

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # defusedxml ships a DeprecationWarning on its cElementTree alias; it's a
    # transitive dep (doctr → lxml → defusedxml) that we cannot fix upstream.
    "ignore::DeprecationWarning:defusedxml",
]
